--- a/UndoService/UndoService/UndoService.csproj
+++ b/UndoService/UndoService/UndoService.csproj
@@ -7,7 +7,7 @@
     <Authors>Peter Dongan</Authors>
     <Company />
     <PackageLicenseFile></PackageLicenseFile>
-    <Description>Simple undo/redo service based on the momento pattern. It uses delegates to access state. It can track changes to different parts of the application individually, while using one unified interface for performing undo/redo. This reduces the memory imprint and facilitates modular design. See the unit tests for examples of usage (a link to the repo is provided).</Description>
+    <Description>Simple undo/redo service based on the momento pattern. It uses delegates to access state. It can track changes to different parts of the application individually, while using one unified interface for performing undo/redo. This reduces the memory imprint and facilitates modular design. See the unit tests in the source repository for examples of how to use.</Description>
     <Copyright>Peter Dongan</Copyright>
     <PackageProjectUrl>https://github.com/peterdongan/UndoService</PackageProjectUrl>
     <RepositoryType>Git</RepositoryType>
