--- a/UndoService/UndoService/UndoService.csproj
+++ b/UndoService/UndoService/UndoService.csproj
@@ -17,10 +17,12 @@
     <AssemblyVersion>2.1.0.0</AssemblyVersion>
     <FileVersion>2.1.0.0</FileVersion>
     <PackageReleaseNotes>IUndoService.StateSet event added. This is intended to allow changed elements to be displayed in a UI in cases where they might not be currently visible when Undo/Redo is invoked.
-IUndoService.Id removed. This was used internally by AggregateUndoService and external changes to it could have caused problems.</PackageReleaseNotes>
+IUndoService.Id removed. This was used internally by AggregateUndoService and external changes to it could have caused problems.
+Common validation code extracted into new class UndoServiceValidator.</PackageReleaseNotes>
     <Version>2.1.0-alpha</Version>
     <PackageIconUrl />
     <NeutralLanguage>en-IE</NeutralLanguage>
+    <RootNamespace>StateManagement</RootNamespace>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
