--- a/UndoService/UndoService/UndoService.csproj
+++ b/UndoService/UndoService/UndoService.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
@@ -16,10 +16,11 @@
     <RepositoryUrl>https://github.com/peterdongan/UndoService</RepositoryUrl>
     <AssemblyVersion>2.1.0.0</AssemblyVersion>
     <FileVersion>2.1.0.0</FileVersion>
-    <PackageReleaseNotes>IUndoService.StateSet event added. This is intended to allow changed elements to be displayed in a UI in cases where they might not be currently visible when Undo/Redo is invoked.
-IUndoService.Id removed. This was used internally by AggregateUndoService and external changes to it could have caused problems.
+    <PackageReleaseNotes>SubUndoService class added. This is now used by AggregateUndoService instead of IUndoService.
+IUndoService.StateSet event added. This is intended to allow changed elements to be displayed in a UI in cases where they might not be currently visible when Undo/Redo is invoked.
+IUndoService.Id removed. This was exposed incorrectly and used interally by AggregateUndoService.
 Common validation code extracted into new public class UndoServiceValidator.</PackageReleaseNotes>
-    <Version>2.1.0-alpha</Version>
+    <Version>2.1.1-alpha</Version>
     <PackageIconUrl />
     <NeutralLanguage>en-IE</NeutralLanguage>
     <RootNamespace>StateManagement</RootNamespace>
