--- a/UndoService/UndoService/UndoService.csproj
+++ b/UndoService/UndoService/UndoService.csproj
@@ -14,14 +14,10 @@
     <PackageTags>undo redo momento service .net</PackageTags>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <RepositoryUrl>https://github.com/peterdongan/UndoService</RepositoryUrl>
-    <AssemblyVersion>2.1.3.0</AssemblyVersion>
-    <FileVersion>2.1.3.0</FileVersion>
-    <PackageReleaseNotes>SubUndoService class added. This is now used by AggregateUndoService instead of IUndoService.
-IStateTracker interface added.
-StateSet event added. This is intended to allow changed elements to be displayed in a UI in cases where they might not be currently visible when Undo/Redo is invoked.
-IUndoService.Id removed. This was exposed incorrectly and used interally by AggregateUndoService.
-Common validation code extracted into new public class UndoServiceValidator.</PackageReleaseNotes>
-    <Version>2.1.3-alpha</Version>
+    <AssemblyVersion>2.1.5.0</AssemblyVersion>
+    <FileVersion>2.1.5.0</FileVersion>
+    <PackageReleaseNotes></PackageReleaseNotes>
+    <Version>2.1.5-alpha</Version>
     <PackageIconUrl />
     <NeutralLanguage>en-IE</NeutralLanguage>
     <RootNamespace>StateManagement</RootNamespace>
