--- a/.gitignore
+++ b/.gitignore
@@ -56,3 +56,17 @@ x64/
 *.pidb
 *.log
 *.scc
+
+
+# Others
+*.Cache
+ClientBin/
+[Ss]tyle[Cc]op.*
+~$*
+*~
+*.dbmdl
+*.[Pp]ublish.xml
+*.pfx
+*.publishsettings
+modulesbin/
+tempbin/
